inliner tests: reduce